--- a/study.html
+++ b/study.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proffy| Sua Plataforma de estudos online</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/partials/header.css">
+    <link rel="stylesheet" href="styles/partials/forms.css">
     <link rel="stylesheet" href="styles/partials/page-study.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700&amp;family=poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 </head>
@@ -85,17 +87,17 @@
 
             <article class="teacher-item">
                 <header>
-                    <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" alt="Diego Fernandes">
+                    <img src="https://avatars2.githubusercontent.com/u/6643122?s=400&u=1e9e1f04b76fb5374e6a041f5e41dce83f3b5d92&v=4">
                     <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
+                        <strong>Mayk Brito</strong>
+                        <span>Educação Fisica</span>
                     </div>
                 </header>
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
+                <p>Instrutor de Educação Física para iniciantes, minha missão de vida é levar saúde e contribuir para o crescimento de quem se interessar. Comecei a minha jornada profissional em 2001, quando meu pai me deu dois alteres de 32kg com a seguinte condição: "Aprenda a fazer dinheiro com isso!"</p>
 
                 <footer>
-                    <p>Preço/hora<strong>R$ 20,00</strong>
+                    <p>Preço/hora<strong>R$ 40,00</strong>
                     </p>
                     <button type="button">
                         <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
@@ -105,17 +107,17 @@
 
             <article class="teacher-item">
                 <header>
-                    <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" alt="Diego Fernandes">
+                    <img src="https://avatars3.githubusercontent.com/u/37598914?s=460&u=5d771482b6d4c0f07cf640c5bf1b4a982fbfc0ee&v=4">
                     <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
+                        <strong>Thiago Mendes</strong>
+                        <span>Geografia</span>
                     </div>
                 </header>
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
+                <p>As vezes não sei nem onde eu tô, mas consigo me localizar facilmente em qualquer lugar. Tenho memória fotográfica e nunca fico perdido. Eu ensino a galera como não se perder na vida, com lições geográficas simples pra você nunca mais precisar de mapa na sua bela vida.</p>
 
                 <footer>
-                    <p>Preço/hora<strong>R$ 20,00</strong>
+                    <p>Preço/hora<strong>R$ 360,00</strong>
                     </p>
                     <button type="button">
                         <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
